--- a/01 introduction/00 introduction of course.ipynb
+++ b/01 introduction/00 introduction of course.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "073f912f",
    "metadata": {},
    "source": [
     "<style>\n",
@@ -81,29 +82,51 @@
     "    .card.orange { border-left-color: #ffa726; }\n",
     "    .card.purple { border-left-color: #ba68c8; }\n",
     "    .card.red { border-left-color: #ef5350; }\n",
-    "    .toc-card ul {\n",
-    "      list-style-type: none;\n",
-    "      padding-left: 0;\n",
+    "    .card.gray { border-left-color: #9e9e9e; } /* رنگ جدید برای کتاب‌ها */\n",
+    "\n",
+    "    .book-grid {\n",
+    "      display: flex;\n",
+    "      justify-content: space-around;\n",
+    "      flex-wrap: wrap;\n",
+    "      gap: 1rem;\n",
+    "      margin-top: 1rem;\n",
     "    }\n",
+    "    .book-item {\n",
+    "      text-align: center;\n",
+    "      width: 150px;\n",
+    "    }\n",
+    "    .book-item img {\n",
+    "      width: 120px;\n",
+    "      height: auto;\n",
+    "      border-radius: 5px;\n",
+    "      box-shadow: 0 4px 8px rgba(0,0,0,0.3);\n",
+    "      margin-bottom: 8px;\n",
+    "    }\n",
+    "    .book-item span {\n",
+    "      font-size: 0.85rem;\n",
+    "      color: #ffffff;\n",
+    "      display: block;\n",
+    "    }\n",
+    "\n",
     "    .note {\n",
-    "    background-color: #fdd835;\n",
-    "    color: #000;\n",
-    "    padding: 1rem;\n",
-    "    border-radius: 6px;\n",
-    "    margin-top: 1.25rem;\n",
-    "    font-style: italic;\n",
-    "    font-size: 0.95rem;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "    width: min(900px, 90vw);\n",
-    "    margin: 1.25rem auto 0;\n",
-    "  }\n",
+    "      background-color: #fdd835;\n",
+    "      color: #000;\n",
+    "      padding: 1rem;\n",
+    "      border-radius: 6px;\n",
+    "      margin-top: 1.25rem;\n",
+    "      font-style: italic;\n",
+    "      font-size: 0.95rem;\n",
+    "      font-family: 'Segoe UI', sans-serif;\n",
+    "      width: min(900px, 90vw);\n",
+    "      margin: 1.25rem auto 0;\n",
+    "    }\n",
     "    .image-card img {\n",
-    "    max-width: 40vw;\n",
-    "    height: auto;\n",
-    "    display: block;\n",
-    "    margin: 10px auto;\n",
-    "    border-radius: 5px;\n",
-    "  }\n",
+    "      max-width: 40vw;\n",
+    "      height: auto;\n",
+    "      display: block;\n",
+    "      margin: 10px auto;\n",
+    "      border-radius: 5px;\n",
+    "    }\n",
     "    .toc-card ul li a {\n",
     "      color: #29b6f6;\n",
     "      text-decoration: none;\n",
@@ -113,37 +136,23 @@
     "      color: #66bb6a;\n",
     "      text-decoration: underline;\n",
     "    }\n",
-    "    .toc-card ul ul {\n",
-    "      padding-left: 1.5rem;\n",
-    "    }\n",
     "    @media (max-width: 768px) {\n",
-    "      .section-card {\n",
-    "        padding: 1.25rem;\n",
-    "      }\n",
-    "      .card {\n",
-    "        width: 100%;\n",
-    "        padding: 1rem;\n",
-    "        margin: 0 auto 1rem;\n",
-    "      }\n",
-    "      .container > .card:last-child {\n",
-    "        margin-bottom: 0;\n",
-    "      }\n",
+    "      .section-card { padding: 1.25rem; }\n",
+    "      .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; }\n",
     "      .section-card h1 { font-size: 2rem; }\n",
     "      .section-card h2 { font-size: 1.4rem; }\n",
-    "      .card h3 { font-size: 1.2rem; }\n",
-    "      p, li { font-size: 0.9rem; }\n",
-    "      @media (max-width: 768px) { .section-card { padding: 1.25rem; } .card { width: 100%; padding: 1rem; margin: 0 auto 1rem; } .container > .card:last-child { margin-bottom: 1.5rem; } .container > .note:last-child { margin-bottom: 1.5rem; } .section-card h2 { font-size: 1.4rem; } p { font-size: 0.9rem; } .note { width: 100%; } }\n",
-    "  @media (max-width: 480px) { h1 { font-size: 1.8rem; } .section-card h2 { font-size: 1.2rem; } .card { padding: 0.75rem; } .note { padding: 0.75rem; } p, li { font-size: 0.85rem; } }\n",
+    "      .book-item { width: 100px; }\n",
+    "      .book-item img { width: 80px; }\n",
     "    }\n",
     "</style>\n",
     "\n",
     "<div class=\"section-card\">\n",
     "  <h1>Welcome to the Python Programming Course</h1>\n",
     "</div>\n",
+    "\n",
     "<div class=\"section-card\">\n",
     "  <h2>A short introduction — what this course is and who it's for</h2>\n",
     "  <div class=\"container\">\n",
-    "    <!-- Hero image (from Unsplash, dynamic by query) -->\n",
     "    <div class=\"card image-card blue\" style=\"text-align:center;\">\n",
     "      <h3>Hi! Welcome 👋</h3>\n",
     "      <p>Hello — I'm excited you're here. This course is designed to teach you Python from the ground up in short, practical lessons. We'll balance explanation with hands-on examples so you can follow along on your own machine.</p>\n",
@@ -171,12 +180,12 @@
     "      <h3>Teaching method</h3>\n",
     "      <ul>\n",
     "        <li>Each lesson is presented as a clean and interactive Jupyter Notebook.</li>\n",
-    "        <li>Concepts are explained through real examples and simple demonstrations</li>\n",
+    "        <li>Concepts are explained through real examples and simple demonstrations.</li>\n",
     "        <li>Exercises at the end of each section help reinforce what you’ve learned.</li>\n",
     "        <li>The course follows a clear, step-by-step progression.</li>\n",
     "      </ul>\n",
     "      <div class=\"note\">\n",
-    "      <strong>Tip:</strong> open each lesson folder in VS Code and try the examples as you watch.</p>\n",
+    "        <strong>Tip:</strong> open each lesson folder in VS Code and try the examples as you watch.\n",
     "      </div>\n",
     "    </div>\n",
     "    <div class=\"card blue\">\n",
@@ -184,36 +193,44 @@
     "      <p>\n",
     "      All notebooks and course materials are available on GitHub:\n",
     "      <br>\n",
-    "      <a href=\"https://github.com/MAA5524/Python-Course\">GitHub Repository<a>\n",
+    "      <a href=\"https://github.com/MAA5524/Python-Course\" target=\"_blank\" style=\"color: #29b6f6; text-decoration: none;\">GitHub Repository</a>\n",
     "      </p>\n",
     "    </div>\n",
-    "    <div class=\"card red\">\n",
-    "      <h3>How to use these notebook?</h3>\n",
-    "      <ol>\n",
-    "        <li>Read the short sections and run code cells if present.</li>\n",
-    "        <li>Try the exercises at the end of each lesson folder.</li>\n",
-    "        <li>At the end of the course you'll build a small project that uses what you've learned.</li>\n",
-    "      </ol>\n",
+    "    <div class=\"card gray\">\n",
+    "      <h3>📚 Suggested Resources for Deeper Learning</h3>\n",
+    "      <p>For those who want to dive deeper into the world of Python, we recommend these world-class books:</p>\n",
+    "      <div class=\"book-grid\">\n",
+    "        <div class=\"book-item\">\n",
+    "          <img src=\"../images/crash_course.jpg\" alt=\"Python Crash Course\">\n",
+    "          <span>Python Crash Course</span>\n",
+    "        </div>\n",
+    "        <div class=\"book-item\">\n",
+    "          <img src=\"../images/fluent_python.jpg\" alt=\"Fluent Python\">\n",
+    "          <span>Fluent Python</span>\n",
+    "        </div>\n",
+    "        <div class=\"book-item\">\n",
+    "          <img src=\"../images/automate_boring.jpg\" alt=\"Automate the Boring Stuff\">\n",
+    "          <span>Automate the Boring Stuff</span>\n",
+    "        </div>\n",
+    "      </div>\n",
     "    </div>\n",
-    "    <div>\n",
-    "      <!-- Button to open the next notebook -->\n",
-    "      <p style=\"text-align:center; margin-top:1rem;\">\n",
-    "        <a href=\"01 Introduction to Python Programming.ipynb\" target=\"_blank\" style=\"\n",
-    "            display:inline-block;\n",
-    "            background-color:#29b6f6;\n",
-    "            color:white;\n",
-    "            padding:0.6rem 1.2rem;\n",
-    "            border-radius:8px;\n",
-    "            text-decoration:none;\n",
-    "            font-weight:bold;\n",
-    "            transition: background-color 0.3s;\n",
-    "        \" onmouseover=\"this.style.backgroundColor='#66bb6a'\" onmouseout=\"this.style.backgroundColor='#29b6f6'\">\n",
-    "          Go to Lesson 01\n",
-    "        </a>\n",
-    "      </p>\n",
-    "    </div>\n",
+    "    <p style=\"text-align:center; margin-top:1rem;\">\n",
+    "      <a href=\"01 Introduction to Python Programming.ipynb\" target=\"_blank\" style=\"\n",
+    "          display:inline-block;\n",
+    "          background-color:#29b6f6;\n",
+    "          color:white;\n",
+    "          padding:0.6rem 1.2rem;\n",
+    "          border-radius:8px;\n",
+    "          text-decoration:none;\n",
+    "          font-weight:bold;\n",
+    "          transition: background-color 0.3s;\n",
+    "      \" onmouseover=\"this.style.backgroundColor='#66bb6a'\" onmouseout=\"this.style.backgroundColor='#29b6f6'\">\n",
+    "        Go to Lesson 01\n",
+    "      </a>\n",
+    "    </p>\n",
+    "\n",
     "  </div>\n",
-    "</div>\n"
+    "</div>"
    ]
   }
  ],
