--- a/01 introduction/01 Introduction to Python programming.ipynb
+++ b/01 introduction/01 Introduction to Python programming.ipynb
@@ -16,16 +16,16 @@
     "    <div class=\"card blue toc-card\">\n",
     "      <ul>\n",
     "        <li>\n",
-    "            <a href=\"#toc1_\">Programming Languages Overview</a>\n",
+    "            <a href=\"#toc1_\">1. Programming Languages Overview</a>\n",
     "        </li>\n",
     "        <li>\n",
-    "            <a href=\"#toc2_\">Why Python? (Simplicity & AI Ready)</a>\n",
+    "            <a href=\"#toc2_\">2. Why Python? (Simplicity & AI Ready)</a>\n",
     "        </li>\n",
     "        <li>\n",
-    "            <a href=\"#toc3_\">Key Features & Applications</a>\n",
+    "            <a href=\"#toc3_\">3. Key Features & Applications</a>\n",
     "        </li>\n",
     "        <li>\n",
-    "            <a href=\"#toc4_\">How Python Works (Interpreter vs. Compiler)</a>\n",
+    "            <a href=\"#toc4_\">4. How Python Works (Interpreter vs. Compiler)</a>\n",
     "        </li>\n",
     "      </ul>\n",
     "    </div>\n",
@@ -236,14 +236,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<style>*{box-sizing:border-box}.section-card{background:linear-gradient(145deg,rgb(61,61,87),rgb(49,49,70));border-radius:15px;padding:2rem;margin:0 auto 2.5rem;box-shadow:0 8px 20px rgba(0,0,0,0.5);width:100%;max-width:min(1200px,95vw)}.section-card h2,.card h3{color:#ffffff;font-family:'Poppins',sans-serif;letter-spacing:1px}.section-card h2{text-align:center;font-size:1.8rem;margin-bottom:1.5rem}.card h3{font-size:1.3rem;margin-bottom:0.75rem;font-weight:bold}.container{display:flex;flex-direction:column;gap:1.25rem;align-items:center}.card{background:linear-gradient(145deg,#24243e,#1e1e3a);border-radius:12px;padding:1.5rem;box-shadow:0 6px 16px rgba(0,0,0,0.4);border-left:4px solid transparent;width:min(1000px,90vw);margin:0 auto 1.25rem;transition:transform 0.3s ease,box-shadow 0.3s ease}.card:hover{transform:translateY(-6px);box-shadow:0 10px 20px rgba(0,0,0,0.5)}.container>.card:last-child{margin-bottom:2rem}.card.purple{border-left-color:#ba68c8}p,li{color:#dcdcdc;font-size:0.95rem;line-height:1.5;font-family:'Segoe UI',sans-serif}p{margin-bottom:0.75rem}ul,ol{padding-left:1.25rem;margin-bottom:0.75rem}li{margin-bottom:0.5rem}img{display:block;max-width:40vw;height:30vw;margin:20px auto;border-radius:10px}@media (max-width:768px){.section-card{padding:1.25rem}.card{width:100%;padding:1rem;margin:0 auto 1rem}.container>.card:last-child{margin-bottom:1.5rem}.section-card h2{font-size:1.4rem}.card h3{font-size:1.2rem}p,li{font-size:0.9rem}}</style>\n",
+    "<style>*{box-sizing:border-box}.section-card{background:linear-gradient(145deg,rgb(61,61,87),rgb(49,49,70));border-radius:15px;padding:2rem;margin:0 auto 2.5rem;box-shadow:0 8px 20px rgba(0,0,0,0.5);width:100%;max-width:min(1200px,95vw)}.section-card h2,.card h3{color:#ffffff;font-family:'Poppins',sans-serif;letter-spacing:1px}.section-card h2{text-align:center;font-size:1.8rem;margin-bottom:1.5rem}.card h3{font-size:1.3rem;margin-bottom:0.75rem;font-weight:bold}.container{display:flex;flex-direction:column;gap:1.25rem;align-items:center}.card{background:linear-gradient(145deg,#24243e,#1e1e3a);border-radius:12px;padding:1.5rem;box-shadow:0 6px 16px rgba(0,0,0,0.4);border-left:4px solid transparent;width:min(1000px,90vw);margin:0 auto 1.25rem;transition:transform 0.3s ease,box-shadow 0.3s ease}.card:hover{transform:translateY(-6px);box-shadow:0 10px 20px rgba(0,0,0,0.5)}.container>.card:last-child{margin-bottom:2rem}.card.green{border-left-color:#66bb6a}p,li{color:#dcdcdc;font-size:0.95rem;line-height:1.5;font-family:'Segoe UI',sans-serif}p{margin-bottom:0.75rem}ul,ol{padding-left:1.25rem;margin-bottom:0.75rem}li{margin-bottom:0.5rem}img{display:block;max-width:40vw;height:30vw;margin:20px auto;border-radius:10px}@media (max-width:768px){.section-card{padding:1.25rem}.card{width:100%;padding:1rem;margin:0 auto 1rem}.container>.card:last-child{margin-bottom:1.5rem}.section-card h2{font-size:1.4rem}.card h3{font-size:1.2rem}p,li{font-size:0.9rem}}</style>\n",
     "\n",
     "<!-- Main Section: How Python Works -->\n",
     "<div class=\"section-card\" id=\"toc4_\">\n",
     "  <h2>How Does Python Work?</h2>\n",
     "  <div class=\"container\">\n",
     "    <!-- Card 1: Interpreter vs Compiler -->\n",
-    "    <div class=\"card\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Interpreter vs. Compiler</h3>\n",
     "      <p>Python is an <strong>Interpreted</strong> language. Unlike compiled languages (C++, Java) that translate the whole code at once, Python translates and executes code <strong>line-by-line</strong>.</p>\n",
     "      <ul>\n",
@@ -253,7 +253,7 @@
     "      <img src=\"../images/interpreter-vs-compiler-example.png\" alt=\"Process Diagram\">\n",
     "    </div>\n",
     "    <!-- Card 2: Pros & Cons -->\n",
-    "    <div class=\"card\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Advantages & Disadvantages</h3>\n",
     "      <div style=\"display: grid; grid-template-columns: 1fr 1fr; gap: 15px;\">\n",
     "          <div>\n",
