--- a/02 Python Setup/01 python Development Setup.ipynb
+++ b/02 Python Setup/01 python Development Setup.ipynb
@@ -196,11 +196,11 @@
     "  <div class=\"container\">\n",
     "    <div class=\"card blue toc-card\">\n",
     "      <ul>\n",
-    "        <li><a href=\"#toc1_\">1. Python Environment</a></li>\n",
-    "        <li><a href=\"#toc2_\">2. VS Code (The Editor)</a></li>\n",
-    "        <li><a href=\"#toc3_\">3. Jupyter Notebook (Interactive Lab)</a></li>\n",
-    "        <li><a href=\"#toc4_\">4. Conda & venv (Environment Managers)</a></li>\n",
-    "        <li><a href=\"#toc5_\">5. Why this Setup?</a></li>\n",
+    "        <li><a href=\"#toc1_\">Python Environment</a></li>\n",
+    "        <li><a href=\"#toc2_\">VS Code (The Editor)</a></li>\n",
+    "        <li><a href=\"#toc3_\">Jupyter Notebook (Interactive Lab)</a></li>\n",
+    "        <li><a href=\"#toc4_\">Conda & venv (Environment Managers)</a></li>\n",
+    "        <li><a href=\"#toc5_\">Why this Setup?</a></li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
@@ -243,7 +243,7 @@
     "      <img src=\"../images/jupyter-interface.png\" alt=\"Jupyter\" style=\"max-width: 60%; display: block; margin: 15px auto; border-radius: 8px;\">\n",
     "    </div>\n",
     "    <div class=\"note\">\n",
-    "      <strong>Rezvan Tip:</strong> Jupyter is best for prototyping and step-by-step learning!\n",
+    "      <strong>Tip:</strong> Jupyter is best for prototyping and step-by-step learning!\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
