--- a/02 Python Setup/03 Getting Started with VSCode.ipynb
+++ b/02 Python Setup/03 Getting Started with VSCode.ipynb
@@ -210,120 +210,78 @@
     "</style>\n",
     "\n",
     "<div class=\"section-card\">\n",
-    "  <h1>Getting Started with Visual Studio Code for Python Development</h1>\n",
+    "  <h1>Getting Started with VS Code</h1>\n",
     "</div>\n",
     "\n",
-    "<!-- Table of Contents -->\n",
     "<div class=\"section-card\" id=\"toc0_\">\n",
     "  <h2>Table of Contents</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card toc-card blue\">\n",
     "      <h3>Contents</h3>\n",
     "      <ul>\n",
-    "        <li><a href=\"#toc1_\">Opening VS Code in Different Directories and Files</a></li>\n",
+    "        <li><a href=\"#toc1_\">Opening Projects</a></li>\n",
     "        <li><a href=\"#toc2_\">Interface Tour</a></li>\n",
-    "        <li><a href=\"#toc3_\">Extensions</a>\n",
-    "          <ul>\n",
-    "            <li><a href=\"#toc3_1_\">Python Extension</a></li>\n",
-    "            <li><a href=\"#toc3_2_\">Jupyter Extension</a></li>\n",
-    "          </ul>\n",
-    "        </li>\n",
-    "        <li><a href=\"#toc4_\">Basic Editing</a></li>\n",
+    "        <li><a href=\"#toc3_\">Core Extensions (Python & Jupyter)</a></li>\n",
+    "        <li><a href=\"#toc4_\">Basic Editing Shortcuts</a></li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "<!-- Section 1: Opening VS Code in Different Directories and Files -->\n",
     "<div class=\"section-card\" id=\"toc1_\">\n",
-    "  <h2>Opening VS Code in Different Directories and Files</h2>\n",
+    "  <h2>Opening Projects & Files</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card orange\">\n",
-    "      <h3>Opening Directories</h3>\n",
+    "      <h3>Best Ways to Start</h3>\n",
     "      <ul>\n",
-    "        <li>Use <code>File -> Open Folder...</code> or <code>Ctrl+K Ctrl+O</code> (Windows/Linux) / <code>Cmd+K Cmd+O</code> (Mac) to browse and open a folder.</li>\n",
-    "        <li>Right-click a folder in file explorer and select \"Open with Code.\"</li>\n",
-    "        <li>In a terminal, navigate to the directory with <code>cd</code> and type <code>code .</code> to open it in VS Code.</li>\n",
-    "      </ul>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\">\n",
-    "      <h3>Opening Single Files</h3>\n",
-    "      <ul>\n",
-    "        <li>Use <code>File -> Open...</code> or <code>Ctrl+O</code> (Windows/Linux) / <code>Cmd+O</code> (Mac) to browse and open a file.</li>\n",
-    "        <li>Right-click a file in file explorer and select \"Open with Code.\"</li>\n",
+    "        <li><strong>Terminal (Recommended):</strong> Navigate to your folder and type <code>code .</code></li>\n",
+    "        <li><strong>GUI:</strong> <code>File -> Open Folder</code> (Ctrl/Cmd + K + O).</li>\n",
+    "        <li><strong>Context Menu:</strong> Right-click any folder and select <strong>\"Open with Code\"</strong>.</li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "<!-- Section 2: Interface Tour -->\n",
     "<div class=\"section-card\" id=\"toc2_\">\n",
-    "  <h2>Interface Tour</h2>\n",
+    "  <h2>Interface Overview</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card purple\">\n",
-    "      <h3>VS Code Interface</h3>\n",
-    "      <img src=\"../images/vscode-interface.png\" alt=\"VS Code Interface\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
     "    <div class=\"card purple\">\n",
-    "      <h3>Editor</h3>\n",
-    "      <p>The central area for writing and editing code, offering numerous functionalities to enhance coding.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card purple\">\n",
-    "      <h3>Sidebar</h3>\n",
-    "      <p>Located on the left, includes panels like Explorer for file navigation, Source Control for version control, and Extensions for managing add-ons.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card purple\">\n",
-    "      <h3>Status Bar</h3>\n",
-    "      <p>At the bottom, displays file type, line/column numbers, and indentation settings.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card purple\">\n",
-    "      <h3>Command Palette</h3>\n",
-    "      <p>Access via <code>Ctrl+Shift+P</code> (Windows/Linux) or <code>Cmd+Shift+P</code> (Mac) to execute commands and access features.</p>\n",
+    "      <ul>\n",
+    "        <li><strong>Editor:</strong> Your main coding area.</li>\n",
+    "        <li><strong>Sidebar:</strong> Explorer (Files), Search, and Extensions.</li>\n",
+    "        <li><strong>Command Palette:</strong> The heart of VS Code (<code>Ctrl/Cmd + Shift + P</code>).</li>\n",
+    "        <li><strong>Status Bar:</strong> Bottom bar showing Python version and encoding.</li>\n",
+    "      </ul>\n",
+    "      <img src=\"../images/vscode-interface.png\" alt=\"Interface\" style=\"max-width: 65%; display: block; margin: 15px auto; border-radius: 8px;\">\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "<!-- Section 3: Extensions -->\n",
     "<div class=\"section-card\" id=\"toc3_\">\n",
-    "  <h2>Extensions</h2>\n",
+    "  <h2>Essential Extensions</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card green\">\n",
-    "      <h3>Overview</h3>\n",
-    "      <p>Extensions are add-ons that enhance VS Code’s capabilities for various programming languages and workflows.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card green\" id=\"toc3_1_\">\n",
     "      <h3>Python Extension</h3>\n",
-    "      <ul>\n",
-    "        <li><strong>IntelliSense:</strong> Intelligent code completion for Python keywords, modules, classes, and custom objects.</li>\n",
-    "        <li><strong>Code Linting:</strong> Catch errors and enforce coding standards with an integrated linter.</li>\n",
-    "        <li><strong>Code Formatting:</strong> Automatically format code per PEP 8 style guide.</li>\n",
-    "        <li><strong>Code Navigation:</strong> Use \"Go to Definition\" and \"Find All References\" for easy navigation.</li>\n",
-    "        <li><strong>Interactive Python:</strong> Run code interactively in the integrated terminal.</li>\n",
-    "      </ul>\n",
+    "      <p>Adds <strong>IntelliSense</strong> (Autofill), <strong>Linting</strong> (Error checking), and <strong>Formatting</strong> (PEP 8).</p>\n",
     "      <img src=\"../images/vscode-python-ext.png\" alt=\"Python Extension\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
-    "    <div class=\"card green\" id=\"toc3_2_\">\n",
+    "    <div class=\"card green\">\n",
     "      <h3>Jupyter Extension</h3>\n",
-    "      <ul>\n",
-    "        <li><strong>Open and Edit Notebooks:</strong> Create and edit Jupyter notebooks within VS Code.</li>\n",
-    "        <li><strong>Intelligent Editing:</strong> Use VS Code’s IntelliSense and editing features in notebooks.</li>\n",
-    "        <li><strong>Kernel Management:</strong> Manage and switch between Python kernels for notebooks.</li>\n",
-    "      </ul>\n",
+    "      <p>Allows creating <code>.ipynb</code> files, managing <strong>Kernels</strong>, and interactive data visualization.</p>\n",
     "      <img src=\"../images/vscode-jupyter-ext.png\" alt=\"Jupyter Extension\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "<!-- Section 4: Basic Editing -->\n",
     "<div class=\"section-card\" id=\"toc4_\">\n",
-    "  <h2>Basic Editing</h2>\n",
+    "  <h2>Must-Know Shortcuts</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card red\">\n",
-    "      <h3>Basic Operations</h3>\n",
-    "      <ul>\n",
-    "        <li>Open a file with <code>File -> Open</code> or <code>Ctrl+O</code> (Windows/Linux) / <code>Cmd+O</code> (Mac).</li>\n",
-    "        <li>Save changes with <code>Ctrl+S</code> (Windows/Linux) / <code>Cmd+S</code> (Mac).</li>\n",
-    "        <li>Use standard shortcuts for cut, copy, paste, and undo.</li>\n",
+    "      <table style=\"width:100%; color:#dcdcdc; border-collapse: collapse;\">\n",
+    "        <tr><td style=\"padding: 5px;\"><strong>Save:</strong></td><td><code>Ctrl/Cmd + S</code></td></tr>\n",
+    "        <tr><td style=\"padding: 5px;\"><strong>Quick Open File:</strong></td><td><code>Ctrl/Cmd + P</code></td></tr>\n",
+    "        <tr><td style=\"padding: 5px;\"><strong>Toggle Sidebar:</strong></td><td><code>Ctrl/Cmd + B</code></td></tr>\n",
+    "        <tr><td style=\"padding: 5px;\"><strong>Terminal:</strong></td><td><code>Ctrl + `</code></td></tr>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
